Add favicon link and enhance footer with brand and contact information

--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,59 @@
 <!-- /footer.html -->
-<footer class="py-4 bg-dark text-white">
-    <div class="container text-center">
-        <p>&copy; 2025 DraftOrbit Studio. All Rights Reserved.</p>
-        <p>Mandya, Karnataka</p>
-        <div>
-            <!-- TODO: Add your actual social media links -->
-            <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-            <a href="mailto:draftorbitstudio@gmail.com" class="text-white"><i class="bi bi-envelope-fill"></i></a>
+<footer class="bg-dark text-white pt-5 pb-4">
+
+    <div class="container text-center text-md-start">
+        <div class="row text-center text-md-start">
+
+            <!-- Column 1: Brand Info -->
+            <div class="col-md-4 col-lg-4 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 fw-bold text-primary">DraftOrbit Studio</h5>
+                <p>
+                    Our mission is to empower creators and innovators by transforming their digital ideas into high-quality, functional prototypes with speed, precision, and creativity.
+                </p>
+            </div>
+
+            <!-- Column 2: Quick Links -->
+            <div class="col-md-3 col-lg-2 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 fw-bold">Quick Links</h5>
+                <p><a href="index.html" class="footer-link">Home</a></p>
+                <p><a href="services.html" class="footer-link">Services</a></p>
+                <p><a href="portfolio.html" class="footer-link">Our Work</a></p>
+                <p><a href="contact.html" class="footer-link">Get a Quote</a></p>
+            </div>
+
+            <!-- Column 3: Contact Info -->
+            <div class="col-md-4 col-lg-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 fw-bold">Contact</h5>
+                <p><i class="bi bi-geo-alt-fill me-3"></i>Mandya, Karnataka</p>
+                <p><i class="bi bi-envelope-fill me-3"></i>draftorbitstudio@gmail.com</p>
+                <p><i class="bi bi-whatsapp me-3"></i>+91-XXXXXXXXXX</p>
+            </div>
+        </div>
+
+        <hr class="mb-4">
+
+        <!-- Bottom Row: Copyright & Socials -->
+        <div class="row align-items-center">
+
+            <!-- Copyright -->
+            <div class="col-md-7 col-lg-8">
+                <p class="mb-0">&copy; 2025 DraftOrbit Studio. All Rights Reserved.</p>
+            </div>
+
+            <!-- Social Media Icons -->
+            <div class="col-md-5 col-lg-4">
+                <div class="text-center text-md-end">
+                    <ul class="list-unstyled list-inline mb-0">
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <!-- TODO: Add a link to your LinkedIn if you have one -->
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="bi bi-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
