--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     
     <!-- SEO Meta Tags -->
     <title>Contact & Quote - DraftOrbit Studio</title>
