--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     
     <!-- SEO Meta Tags -->
     <title>DraftOrbit Studio – 3D Printing & CAD Design in Mandya</title>
