--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,9 @@
 <!-- /navbar.html -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">DraftOrbit Studio</a>
+        <a class="navbar-brand fw-bold" href="index.html">
+        <img src="assets/images/logo.png" alt="DraftOrbit Studio Logo" height="32" class="me-2 align-middle">
+            DraftOrbit Studio </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
