--- a/footer.html
+++ b/footer.html
@@ -1,58 +1,77 @@
 <!-- /footer.html -->
-<footer class="bg-dark text-white pt-5 pb-4">
-
-    <div class="container text-center text-md-start">
-        <div class="row text-center text-md-start">
-
-            <!-- Column 1: Brand Info -->
-            <div class="col-md-4 col-lg-4 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 fw-bold text-primary">DraftOrbit Studio</h5>
-                <p>
-                    Our mission is to empower creators and innovators by transforming their digital ideas into high-quality, functional prototypes with speed, precision, and creativity.
-                </p>
+<footer class="footer-bg text-light">
+    <div class="container py-5">
+        <!-- Top Row: Logo and Socials -->
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <h5 class="fw-bold">DraftOrbit Studio</h5>
             </div>
-
-            <!-- Column 2: Quick Links -->
-            <div class="col-md-3 col-lg-2 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 fw-bold">Quick Links</h5>
-                <p><a href="index.html" class="footer-link">Home</a></p>
-                <p><a href="services.html" class="footer-link">Services</a></p>
-                <p><a href="portfolio.html" class="footer-link">Our Work</a></p>
-                <p><a href="contact.html" class="footer-link">Get a Quote</a></p>
-            </div>
-
-            <!-- Column 3: Contact Info -->
-            <div class="col-md-4 col-lg-3 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 fw-bold">Contact</h5>
-                <p><i class="bi bi-geo-alt-fill me-3"></i>Mandya, Karnataka</p>
-                <p><i class="bi bi-envelope-fill me-3"></i>draftorbitstudio@gmail.com</p>
-                <p><i class="bi bi-whatsapp me-3"></i>+91-XXXXXXXXXX</p>
+            <div class="col-md-6 d-flex justify-content-md-end">
+                <a href="#" class="footer-social-icon"><i class="bi bi-github"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-twitter-x"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-linkedin"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-youtube"></i></a>
             </div>
         </div>
 
-        <hr class="mb-4">
+        <hr style="border-color: #444;">
 
-        <!-- Bottom Row: Copyright & Socials -->
-        <div class="row align-items-center">
-
-            <!-- Copyright -->
-            <div class="col-md-7 col-lg-8">
-                <p class="mb-0">&copy; 2025 DraftOrbit Studio. All Rights Reserved.</p>
+        <!-- Main Links Grid -->
+        <div class="row mt-5 footer-links-grid">
+            <!-- Company Column -->
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <h6 class="footer-heading">Company</h6>
+                <ul class="list-unstyled">
+                    <li><a href="about.html" class="footer-link">About</a></li>
+                    <li><a href="#" class="footer-link">Careers</a></li>
+                    <li><a href="contact.html" class="footer-link">Contact and support</a></li>
+                </ul>
             </div>
+            <!-- Product Column -->
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <h6 class="footer-heading">Services</h6>
+                <ul class="list-unstyled">
+                    <li><a href="services.html" class="footer-link">CAD Design</a></li>
+                    <li><a href="services.html" class="footer-link">3D Printing</a></li>
+                    <li><a href="portfolio.html" class="footer-link">Customer showcase</a></li>
+                </ul>
+            </div>
+            <!-- Resources Column -->
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <h6 class="footer-heading">Resources</h6>
+                <ul class="list-unstyled">
+                    <li><a href="page.html?id=3" class="footer-link">Blog</a></li>
+                    <li><a href="#" class="footer-link">Videos</a></li>
+                    <li><a href="#" class="footer-link">Changelog</a></li>
+                    <li><a href="#" class="footer-link">Status</a></li>
+                    <li><a href="#" class="footer-link">Newsletter</a></li>
+                </ul>
+            </div>
+            <!-- Legal Column -->
+            <div class="col-6 col-md-3 col-lg-2 mb-4">
+                <h6 class="footer-heading">Legal</h6>
+                <ul class="list-unstyled">
+                    <li><a href="page.html?id=1" class="footer-link">Terms of service</a></li>
+                    <li><a href="page.html?id=2" class="footer-link">Privacy policy</a></li>
+                </ul>
+            </div>
+        </div>
 
-            <!-- Social Media Icons -->
-            <div class="col-md-5 col-lg-4">
-                <div class="text-center text-md-end">
-                    <ul class="list-unstyled list-inline mb-0">
-                        <li class="list-inline-item">
-                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="bi bi-instagram"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <!-- TODO: Add a link to your LinkedIn if you have one -->
-                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="bi bi-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
+        <!-- Certifications -->
+        <div class="row mt-4 justify-content-center text-center">
+            <div class="col-auto">
+                <img src="https://via.placeholder.com/60x60.png?text=ISO" alt="ISO Certified" class="certification-logo">
+            </div>
+            <div class="col-auto">
+                <img src="https://via.placeholder.com/60x60.png?text=SOC" alt="SOC Certified" class="certification-logo">
+            </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="row mt-5">
+            <div class="col-12 text-center text-muted small">
+                <p class="mb-0">&copy; 2025 DraftOrbit Studio</p>
+                <p>Mandya, Karnataka, 571404, INDIA</p>
             </div>
         </div>
     </div>
