--- a/navbar.html
+++ b/navbar.html
@@ -1,30 +1,59 @@
-<!-- /navbar.html -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+<!-- /navbar.html (Updated with Icons) -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top header-border">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">
-        <img src="assets/images/logo.png" alt="DraftOrbit Studio Logo" height="32" class="me-2 align-middle">
-            DraftOrbit Studio </a>
+        <!-- Brand and Logo -->
+        <!-- Logo Image and Brand -->
+        <a class="navbar-brand d-flex align-items-center fw-bold" href="index.html">
+            <img src="assets/images/logo.png" alt="DraftOrbit Studio Logo" width="32" height="32" class="me-2">
+            DraftOrbit Studio
+        </a>
+
+        <!-- Centered Navigation -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <!-- Added icon for Services -->
+                    <a class="nav-link d-flex align-items-center" href="services.html">
+                        <i class="bi bi-stack me-2"></i>
+                        <span>Services</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <!-- Added icon for Our Work -->
+                    <a class="nav-link d-flex align-items-center" href="portfolio.html">
+                        <i class="bi bi-grid-fill me-2"></i>
+                        <span>Our Work</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <!-- Added icon for About Us -->
+                    <a class="nav-link d-flex align-items-center" href="about.html">
+                        <i class="bi bi-person-fill me-2"></i>
+                        <span>About Us</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <!-- Added icon for Resources -->
+                    <a class="nav-link d-flex align-items-center" href="#">
+                        <i class="bi bi-book-fill me-2"></i>
+                        <span>Resources</span>
+                    </a>
+                </li>
+            </ul>
+
+            <!-- Right-aligned Action Buttons -->
+            <div class="d-flex align-items-center">
+                <a href="#login" class="nav-link me-3">Login</a>
+                <a href="contact.html" class="btn btn-outline-secondary btn-sm me-2">Get a Demo</a>
+                <a href="contact.html" class="btn btn-primary btn-sm d-flex align-items-center">
+                    Get a Quote <i class="bi bi-arrow-right ms-2"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- Toggler for mobile view -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Our Work</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-primary ms-lg-3" href="contact.html">Get a Quote</a>
-                </li>
-            </ul>
-        </div>
     </div>
 </nav>
