--- a/page.html
+++ b/page.html
@@ -52,5 +52,19 @@
     <!-- IMPORTANT: Link to your new database and renderer files -->
     <script src="assets/js/pages-data.js"></script>
     <script src="assets/js/page-renderer.js" defer></script>
+    <script src="assets/js/auth.js" defer></script>
+
+        <!-- ===== SCRIPTS ===== -->
+    
+    <!-- Firebase SDKs (if not already on the page) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Your Custom Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets.js/auth.js"></script> <!-- This must be present -->
 </body>
 </html>
