--- a/footer.html
+++ b/footer.html
@@ -7,10 +7,14 @@
                 <h5 class="fw-bold">DraftOrbit Studio</h5>
             </div>
             <div class="col-md-6 d-flex justify-content-md-end">
-                <a href="#" class="footer-social-icon"><i class="bi bi-github"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-whatsapp"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-facebook"></i></a>
+                <a href="#" class="footer-social-icon"><i class="bi bi-youtube"></i></a>
                 <a href="#" class="footer-social-icon"><i class="bi bi-twitter-x"></i></a>
                 <a href="#" class="footer-social-icon"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="footer-social-icon"><i class="bi bi-youtube"></i></a>
+                
+                
             </div>
         </div>
 
