--- a/portfolio.html
+++ b/portfolio.html
@@ -98,10 +98,17 @@
     <!-- ======== FOOTER PLACEHOLDER ======== -->
     <div id="footer-placeholder"></div>
 
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- ===== SCRIPTS ===== -->
+    
+    <!-- Firebase SDKs (if not already on the page) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
-    <!-- Your Custom JS -->
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
+    <script src="assets.js/auth.js"></script> <!-- This must be present -->
 </body>
 </html>
