--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets.js/auth.js"></script> <!-- This must be present -->
+    <script src="assets/js/auth.js"></script> <!-- This must be present -->
     <!-- The Master Controller Script -->
     <script>
       document.addEventListener("DOMContentLoaded", () => {
