Fix script paths, enhance login/signup forms, and add account management page with Firestore integration

--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@ form.addEventListener('submit', function(e) {
     
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets.js/auth.js"></script> <!-- This must be present -->
+    <script src="assets/js/auth.js"></script> <!-- This must be present -->
     <!-- The Master Controller Script -->
 </body>
 </html>
