--- a/footer.html
+++ b/footer.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <!-- Certifications -->
+        <!-- Certifications 
         <div class="row mt-4 justify-content-center text-center">
             <div class="col-auto">
                 <img src="https://via.placeholder.com/60x60.png?text=ISO" alt="ISO Certified" class="certification-logo">
@@ -69,7 +69,7 @@
             <div class="col-auto">
                 <img src="https://via.placeholder.com/60x60.png?text=SOC" alt="SOC Certified" class="certification-logo">
             </div>
-        </div>
+        </div>-->
 
         <!-- Copyright -->
         <div class="row mt-5">
