--- a/about.html
+++ b/about.html
@@ -107,6 +107,6 @@
     
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets.js/auth.js"></script> <!-- This must be present -->
+    <script src="assets/js/auth.js"></script> <!-- This must be present -->
 </body>
 </html>
