--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
     
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets.js/auth.js"></script> <!-- This must be present -->
+    <script src="assets/js/auth.js"></script> <!-- This must be present -->
     
 </body>
 </html>
